
  * Drop phonon-backends-dbg from phonon-dbg Recommends/Breaks. No longer
    needed.
  * Readd packaging copyright/licensing to debian/copyright.
  * Bump libphonon-dev Breaks/Replaces to << 4:4.6.0really4.4.4 for
    libphononexperimental-dev. experimental/avcaptureinterface.h header which
    used to be there up to 4.4.4 (see changelog below).

 -- Modestas Vainius <modax@debian.org>  Sat, 05 Mar 2011 11:59:29 +0200

phonon (4:4.6.0really4.4.4-1) experimental; urgency=low

  * New upstream release.

  [ Pino Toscano ]
  * Do not install the header experimental/avcaptureinterface.h in
    libphonon-dev, as it experimental.

  [ Modestas Vainius ]
  * Drop phonon-backend-xine and phonon-backend-gstreamer. They have been
    split off to their own source packages upstream. Only phonon-backend-null
    remains here.
  * Remove xine and gstreamer specific packages from Build-Depends.
  * Adapt 02_no_rpath.patch to upstream changes.
  * Refresh other debian patches.
  * Remove sequence number from debian patches filenames.
  * Update install files.
  * Switch default backend to phonon-backend-vlc (phonon metapackage).
  * Try to solve an issue with Phonon backends getting auto-installed on
    buildds. phonon-backend-null will be preferred if Phonon is installed via
    libphonon-dev (which normally won't be a case on user systems).
  * Add lintian override for "phonon-backend-null: empty-binary-package".
  * Reshuffle backends in the Suggests of the phonon metapackage in the order of
    preferrence.
  * Drop README.source, no longer needed since switch to 3.0 (quilt).
  * Show a debconf warning to users who end up installing phonon-backend-null
    (probably unintentionally). The warning is displayed only if both phonon
    and phonon-backend-null packages end up being installed.
  * Update debian/copyright.
  * Point Homepage to http://phonon.kde.org/.
  * Add packages (libphononexperimental4 and libphononexperimental-dev) for the