@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Modestas Vainius <modax@debian.org>, Fathi Boudra <fabo@debian.org>
 Build-Depends: cdbs (>= 0.4.51), debhelper (>= 7.4.13), cmake (>= 2.6.2),
- pkg-kde-tools (>= 0.9), dpkg-dev (>= 1.15.5), automoc, libglib2.0-dev,
+ pkg-kde-tools (>= 0.10), dpkg-dev (>= 1.15.5), automoc, libglib2.0-dev,
  libpulse-dev (>= 0.9.21), libqt4-dev (>= 4.5)
 Standards-Version: 3.9.1
 Homepage: http://phonon.kde.org/
